# robotframework-selenium-grid-downloader

./: CHANGES  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
GridDownloader/: GridDownloader.py  __init__.py
doc/: generate-doc.sh  keywords.html
docs/: index.html
tests/e2e/: tests.robot
unittests/: __init__.py  run.py
unittests/test/: __init__.py  test_grid_downloader.py  utils.py
